--- a/Model_Recreation/requirements.txt
+++ b/Model_Recreation/requirements.txt
@@ -1,9 +1,9 @@
-pandas==1.3.3
-numpy==1.21.2
-scikit-learn==0.24.2
-tensorflow==2.6.0
-nltk==3.6.5
-emoji==1.6.1
-networkx==2.6.3
-matplotlib==3.4.3
-streamlit==1.1.0
+pandas
+numpy
+scikit-learn
+tensorflow
+nltk
+emoji
+networkx
+matplotlib
+streamlit
